--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^9.12.1",
     "geofire-common": "^6.0.0",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.0.8",
     "sass": "^1.55.0",
