--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.13.0",
     "cleave.js": "^1.6.0",
     "firebase": "^9.12.1",
     "geofire-common": "^6.0.0",
