--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@capacitor/camera": "^4.1.3",
+    "@ionic/pwa-elements": "^3.1.1",
     "@tanstack/react-query": "^4.13.0",
     "cleave.js": "^1.6.0",
     "firebase": "^9.12.1",
