--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@capacitor/camera": "^4.1.3",
     "@ionic/pwa-elements": "^3.1.1",
+    "@react-query-firebase/firestore": "^1.0.0-dev.7",
     "@tanstack/react-query": "^4.13.0",
     "cleave.js": "^1.6.0",
     "firebase": "^9.12.1",
     "geofire-common": "^6.0.0",
+    "ngeohash": "^0.6.3",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
